src/objects/Procedure__c.object
<CustomObject>
    <fields>
        <fullName>SJM_ICE_Count__c</fullName>
        <label># SJM ICE Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>ICE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>SJM</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SJM_ICE_Pecentage__c</fullName>
        <formula>IF(SJM_ICE__c=0,0,(SJM_ICE__c/Total_ICE__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% SJM ICE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_ICE_Per_Cnt__c</fullName>
        <formula>IF(SJM_ICE_Count__c=0,0,(SJM_ICE_Count__c/ICE_Total_Count__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SJM ICE %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_ICE__c</fullName>
        <label>SJM ICE</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>ICE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>SJM</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SJM_Introducer_Count__c</fullName>
        <label># SJM Introducer Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>EP Study - Introducers</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>Agilis NxT, SL, SR, Mullins, RAMP, LAMP, CSTA, SALF, SEPT</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SJM_Introducer_Pecentage__c</fullName>
        <formula>IF(SJM_Introducer__c=0,0,(SJM_Introducer__c/Total_Introducer__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% SJM Introducer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Introducer_Per_Cnt__c</fullName>
        <formula>IF(SJM_Introducer_Count__c=0,0,(SJM_Introducer_Count__c/Introducer_Total_Count__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SJM Introducer %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Introducer__c</fullName>
        <label>SJM Introducer</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>EP Study - Introducers</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>NxT, SL, SR, Mullins, RAMP, LAMP, CSTA, SALF, SEPT</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SJM_Physician_SJM_Id__c</fullName>
        <description>SJM Id of the Procedure Physician.</description>
        <formula>Procedure_Physician__r.SJM_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician SJM Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJM_Price_Pecentage__c</fullName>
        <formula>IF(

    AND(SJM_Price__c = 0,
        Competitor_Price__c = 0,
        Total_Price__c = 0
       ), 0, (SJM_Price__c  /  Total_Price__c)
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% SJM Rev. Capture</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Price__c</fullName>
        <formula>(SJM_Procedure_Price__c + SJM_Procedure_Items_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SJM Rev.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SJM_Procedure_Items_Price__c</fullName>
        <label>SJM Procedure Items Price</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>SJM, &apos;&apos;, Agilis NxT, SL, SR, Mullins, RAMP, LAMP, CSTA, SALF, SEPT</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SJM_Procedure_Price__c</fullName>
        <label>SJM Procedure Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SJM_Transeptal_Count__c</fullName>
        <label># SJM Transeptal Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>Transseptal Needle</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>SJM</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SJM_Transeptal_Pecentage__c</fullName>
        <formula>IF(SJM_Transeptal__c=0,0,(SJM_Transeptal__c/Total_Transeptal__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% SJM Transeptal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Transeptal_Per_Cnt__c</fullName>
        <formula>IF(SJM_Transeptal_Count__c=0,0,(SJM_Transeptal_Count__c/Transeptal_Total_Count__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SJM Transeptal %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Transeptal__c</fullName>
        <label>SJM Transeptal</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>Transseptal Needle</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>SJM</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Ablation__c</fullName>
        <label>Total Ablation</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>Ablation Catheter</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Count__c</fullName>
        <label># Total Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Diagnostic__c</fullName>
        <label>Total Diagnostic</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>EP Study - Diagnostic EP Catheters</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_ICE__c</fullName>
        <label>Total ICE</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>ICE</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Introducer__c</fullName>
        <label>Total Introducer</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>EP Study - Introducers</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>SJM_Price__c + Competitor_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Rev.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Transeptal__c</fullName>
        <label>Total Transeptal</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>Transseptal Needle</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transeptal_Total_Count__c</fullName>
        <label># Transeptal Total Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>Transseptal Needle</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Upd_CreatedBy__c</fullName>
        <label>Upd_CreatedBy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Ray_Hours__c</fullName>
        <label>X-Ray Hours</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X_Ray_Minutes__c</fullName>
        <label>X-Ray Minutes</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X_Ray_Recorded_Time__c</fullName>
        <formula>IF(ISPICKVAL(X_Ray_Hours__c,&quot;&quot;),NULL,(TEXT(X_Ray_Hours__c) + &quot;:&quot;)) + IF(ISPICKVAL(X_Ray_Minutes__c,&quot;&quot;),NULL,(TEXT(X_Ray_Minutes__c)))</formula>
        <label>X-Ray Recorded Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Ray_Time__c</fullName>
        <label>X-Ray Time</label>
        <picklist>
            <picklistValues>
                <fullName>Not Recorded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recorded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Fluoro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isWithinArea__c</fullName>
        <description>Checks if the procedure falls within logged in user&apos;s area</description>
        <formula>IF( $User.Area__c ==  Account__r.USD_AF_Area__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isWithinArea</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Procedure</label>
    <listViews>
        <fullName>All_Procedures</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Procedure_Date__c</columns>
        <columns>Procedure_Physician__c</columns>
        <columns>Procedure__c</columns>
        <columns>Procedure_Type__c</columns>
        <columns>SJM_Price_Pecentage__c</columns>
        <columns>FCE__c</columns>
        <columns>Fin_CreatedBy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Procedures</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Procedure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedures</pluralLabel>
    <recordTypes>
        <fullName>DBS_Case</fullName>
        <active>true</active>
        <description>Created this record type for DBS Germany procedure tracker</description>
        <label>DBS Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>EP_Case</fullName>
        <active>true</active>
        <label>EP Case</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_User_from_Editing_after24_hours</fullName>
        <active>true</active>
        <description>This rule will restrict regular users from editing Procedure records after 24 hours</description>
        <errorConditionFormula>($User.ProfileId &lt;&gt; &apos;00ej0000000Uqu8&apos;) &amp;&amp; 
(RecordType.DeveloperName = &apos;EP_Case&apos;) &amp;&amp;
((Today() - DATEVALUE(CreatedDate)) &gt; 1)</errorConditionFormula>
        <errorMessage>You can not change the procedure after 24 hrs of its creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>preventCasePast7Days</fullName>
        <active>true</active>
        <description>preventCasePast7Days</description>
        <errorConditionFormula>($User.ProfileId &lt;&gt; &apos;00ej0000000Uqu8&apos;) &amp;&amp; (RecordType.DeveloperName = &apos;EP_Case&apos;) &amp;&amp; 
(TODAY() - Procedure_Date__c &gt; 6)</errorConditionFormula>
        <errorMessage>Procedure date should not exceed past 7 days</errorMessage>
    </validationRules>
</CustomObject>